--- a/server/package.json
+++ b/server/package.json
@@ -2,18 +2,21 @@
   "name": "y",
   "version": "1.0.0",
   "description": "",
-  "main": "",
+  "main": "dist/app.js",
   "scripts": {
-    "start": "nodemon"
+    "start": "nodemon",
+    "build": "npx tsc"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "express": "^4.21.1",
-    "nodemon": "^3.1.7"
+    "nodemon": "^3.1.7",
+    "dotenv": "^16.4.5"
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
-    "@types/mongoose": "^5.11.97"
+    "@types/mongoose": "^5.11.97",
+    "@types/dotenv": "^6.1.1"
   }
 }
