--- a/server/package.json
+++ b/server/package.json
@@ -10,13 +10,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/cors": "^2.8.17",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.21.1",
-    "nodemon": "^3.1.7",
-    "dotenv": "^16.4.5"
+    "nodemon": "^3.1.7"
   },
   "devDependencies": {
+    "@types/dotenv": "^6.1.1",
     "@types/express": "^5.0.0",
     "@types/mongoose": "^5.11.97",
-    "@types/dotenv": "^6.1.1"
+    "@types/cors": "^2.8.17"
   }
 }
