--- a/server/package.json
+++ b/server/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "y",
+  "name": "server",
   "version": "1.0.0",
   "description": "",
   "main": "dist/app.js",
   "scripts": {
-    "start": "nodemon",
+    "start": "node dist/app.js",
     "build": "npx tsc"
   },
   "author": "",
@@ -17,9 +17,10 @@
     "nodemon": "^3.1.7"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/dotenv": "^6.1.1",
     "@types/express": "^5.0.0",
     "@types/mongoose": "^5.11.97",
-    "@types/cors": "^2.8.17"
+    "typescript": "^5.7.2"
   }
 }
