--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "dist/app.js",
   "scripts": {
+    "dev": "nodemon",
     "start": "node dist/app.js",
     "build": "npx tsc"
   },
